kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tasker-ingress
  namespace: default
spec:
  rules:
  - host: minikube.info
    http:
      paths:
      - path: /api
        backend:
          # matches with Service metadata.name
          serviceName: back-end-service
          servicePort: 5000
      - path: /
        backend:
          # matches with Service metadata.name
          serviceName: front-end-service
          servicePort: 80
